# bottom-up-agents

./: .gitignore  README.md  app.py  main.py  pyproject.toml
src/agents/: few_shot_agent.py  memory_agent.py  reasoning_agent.py  simple_agent.py  tool_agent.py
src/core/: base_agent.py  prompts.py  tools.py
